# SimplePointCloudLabeller

./: CMakeLists.txt  README.md  filelistmanager.cpp  filelistmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  pointsdisplaywidget.cpp  pointsdisplaywidget.h  ressources.qrc  simplePointCloudLabeller.desktop  viewPersp.vert  viewPoints.frag
